--- a/monmon/package.json
+++ b/monmon/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.4",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
-    "vue-material-design-icons": "^4.4.0"
+    "vue-material-design-icons": "^4.4.0",
+    "vue-swipe-actions": "^2.0.0-beta.20"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
