--- a/monmon/package.json
+++ b/monmon/package.json
@@ -12,7 +12,8 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-material-design-icons": "^4.4.0",
-    "vue-swipe-actions": "^2.0.0-beta.20"
+    "vue-swipe-actions": "^2.0.0-beta.20",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
